--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --font-heading: "Sen", sans-serif;
+  --primary-color: #ffb900;
+}
 html {
   /* Quy đổi 1rem = 10px */
   font-size: 62.5%;
 }
+
 body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
@@ -28,16 +33,20 @@ a {
   text-align: center;
   font-size: 1.6rem;
   font-weight: 600;
-  border-radius: 24.5px;
+  border-radius: 999px;
   background: #171100;
+}
+.btn:hover {
+  opacity: 0.9;
 }
 /* ===============Header============== */
 .header {
-  background: rgba(235, 162, 16, 0.888);
+  background: #fffcf4;
 }
 .header.fixed {
   position: sticky;
   top: -28px;
+  z-index: 1;
 }
 .header .logo {
   max-width: 75px;
@@ -79,4 +88,144 @@ a {
 .header .btn-sign-up {
   min-width: 144px;
   margin-left: 49px;
+}
+
+/* ===============Hero============== */
+.hero .media-block .img {
+  max-width: 470px;
+  /* height: auto; */
+  object-fit: cover;
+  border-radius: 15px;
+  height: 650px;
+}
+.hero {
+  padding: 56px 0 65px;
+  background: #fffcf4;
+}
+.hero .body {
+  display: flex;
+}
+
+/* ========hero-left========= */
+.hero .media-block {
+  width: 48%;
+  position: relative;
+}
+
+.hero .hero-summary {
+  width: 270px;
+  padding: 24px;
+  position: absolute;
+  bottom: 48px;
+  right: 40px;
+  border-radius: 12px;
+  background-color: #fff;
+  box-shadow: 0 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+.hero-summary .item {
+  display: flex;
+  align-items: center;
+}
+.hero-summary .item + .item {
+  margin-top: 22px;
+}
+.hero-summary .icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff9e8;
+}
+.hero-summary .icon2 {
+  background-color: #fcefff;
+}
+.hero-summary .icon3 {
+  background-color: #ebeaff;
+}
+.hero-summary .info {
+  margin-left: 16px;
+}
+.hero-summary .label {
+  color: #5f5b53;
+  font-size: 1.4rem;
+  line-height: 1.86;
+}
+.hero-summary .title {
+  color: #171100;
+  font-size: 1.8rem;
+  line-height: 1.67;
+  font-weight: 600;
+}
+/* ========hero-right========= */
+.hero .content-block {
+  width: 52%;
+  padding-left: 130px;
+  padding-top: 64px;
+}
+.hero .heading {
+  color: #171100;
+  font-family: var(--font-heading);
+  line-height: 1.17;
+  font-size: 4.5rem;
+  font-weight: 700px;
+  letter-spacing: -1.16px;
+}
+.hero .desc {
+  color: #5f5b53;
+  line-height: 1.67;
+  font-size: 1.8rem;
+  margin-top: 22px;
+}
+.hero .desc-recent {
+  margin-top: 48px;
+}
+.hero .big {
+  margin-top: 8px;
+}
+.hero .big strong {
+  margin-right: 15px;
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 4.4rem;
+  line-height: 1.23;
+}
+.hero .big strong:nth-child(2) {
+  margin-left: 28px;
+}
+.hero .cta-group {
+  margin-top: 38px;
+  display: flex;
+  align-items: center;
+}
+.hero-cta {
+  min-width: 180px;
+  background-color: var(--primary-color);
+  line-height: 64px;
+}
+.hero .watch-video {
+  margin-left: 28px;
+  border: none;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.hero .watch-video .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.07);
+}
+.hero .watch-video span {
+  color: #171100;
+  margin-left: 14px;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67;
 }
